--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       - id: flake8
       - id: end-of-file-fixer
       - id: trailing-whitespace
+        exclude: tests/hello.v1.gtirb.functions
       - id: check-merge-conflict
   - repo: https://github.com/eschulte/lisp-format
     rev: master
