--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# Python files and directories
+*.pyc
+__pycache__/
+.mypy_cache/
+/*.egg-info/
+/build/
+/dist/
+
+# IDE files and directories
+/.vscode/
+
+# Other files and directories
+core.*
+vgcore.*
+
+# Common Lisp files
 *.fasl
