--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -81,7 +81,7 @@ pypi:
     - if [ "$RESPONSE_CODE" = "404" ];
       then
         pip3 install twine --upgrade;
-        python3 setup.py sdist bdist_wheel
+        python3 setup.py sdist bdist_wheel;
         twine check dist/*;
         twine upload dist/* -u __token__ -p $PYPI_API_KEY;
       fi
