--- a/.ci/Dockerfile.build
+++ b/.ci/Dockerfile.build
@@ -8,7 +8,7 @@ RUN apt-get install -y python3-pip && \
 WORKDIR /gt/gtirb/build/python
 RUN python3 setup.py develop
 
-# Instll Capstone.
+# Install Capstone.
 COPY libcapstone-dev_*_amd64.deb ./
 RUN dpkg -i libcapstone-dev_*_amd64.deb \
     && rm libcapstone-dev_*_amd64.deb
