--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -1,10 +1,6 @@
 variables:
-  DOCKER_REGISTRY: "docker.grammatech.com"
-  LOCAL_IMAGE_NAME: "$CI_BUILD_REF_NAME-$CI_PIPELINE_ID"
   GIT_SUBMODULE_STRATEGY: recursive
   GIT_STRATEGY: clone
-  FORMATTER_IMAGE_NAME: "${DOCKER_REGISTRY}/${CI_PROJECT_PATH}/formatter"
-  BUILD_IMAGE_NAME: "${DOCKER_REGISTRY}/${CI_PROJECT_PATH}/build"
 
 stages:
   - build-images
@@ -15,26 +11,13 @@ stages:
   - deploy
   - cleanup
 
-build-images:
-  # rules:
-  #   only changes in .ci/Docker.formatter
-  stage: build-images
-  tags:
-    - shell-exec
-  script:
-    # run docker
-    - docker build -t $FORMATTER_IMAGE_NAME -f .ci/Dockerfile.formatter .
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY
-    - docker push $FORMATTER_IMAGE_NAME
-    - docker build -t $BUILD_IMAGE_NAME -f .ci/Dockerfile.build .
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY
-    - docker push $BUILD_IMAGE_NAME
+default:
+  image: $DOCKER_REGISTRY/rewriting/gtirb-functions
+  tags: ['kubernetes']
+
 
 check-format:
   stage: check-format
-  tags:
-    - docker-exec
-  image: $FORMATTER_IMAGE_NAME
   script:
     - pre-commit run --all-files --show-diff-on-failure
     # helper message for new committers
@@ -60,17 +43,11 @@ check-format:
 
 test:
   stage: test
-  tags:
-    - docker-exec
-  image: $BUILD_IMAGE_NAME
   script:
     - python3 setup.py test
 
 build:
   stage: build
-  tags:
-    - docker-exec
-  image: $BUILD_IMAGE_NAME
   artifacts:
     paths:
       - dist/gtirb_functions-?.?.?-py3-none-any.whl
@@ -82,17 +59,11 @@ test_package:
   variables:
     GIT_STRATEGY: none
   stage: test_package
-  tags:
-    - docker-exec
-  image: $BUILD_IMAGE_NAME
   script:
     - for f in dist/*.whl; do python3 -m pip install $f; done
 
 external-pypi:
   stage: deploy
-  tags:
-    - docker-exec
-  image: $BUILD_IMAGE_NAME
   only:
     - master
   script:
@@ -109,9 +80,6 @@ external-pypi:
 
 internal-pypi:
   stage: deploy
-  tags:
-    - docker-exec
-  image: $BUILD_IMAGE_NAME
   only:
     - master
   script:
