--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -3,18 +3,17 @@ variables:
   GIT_STRATEGY: clone
 
 stages:
-  - build-images
   - check-format
   - test
   - build
   - test_package
   - deploy
-  - cleanup
 
 default:
   image: $DOCKER_REGISTRY/rewriting/gtirb-functions
   tags: ['kubernetes']
-
+  before_script:
+    - pip install --pre --extra-index-url=$EXTRA_INDEX_URL .
 
 check-format:
   stage: check-format
@@ -59,38 +58,55 @@ test_package:
   variables:
     GIT_STRATEGY: none
   stage: test_package
+  before_script: []
   script:
     - for f in dist/*.whl; do python3 -m pip install $f; done
 
-external-pypi:
+export_external:
   stage: deploy
-  only:
-    - master
+  image: python:3.7-slim
   script:
-    - python3 setup.py develop
-    - VERSION=$(python3 -c "import gtirb_functions; print(gtirb_functions.__version__)")
-    - RESPONSE_CODE=$(curl -Ls -o /dev/null -w "%{http_code}" https://pypi.org/project/gtirb-functions/${VERSION}/)
-    - if [ "$RESPONSE_CODE" = "404" ];
-      then
-      pip3 install twine --upgrade;
-      python3 setup.py sdist bdist_wheel;
-      twine check dist/*;
-      twine upload dist/* -u __token__ -p $PYPI_API_KEY;
-      fi
+    - pip install -r requirements-dev.txt
+    - python3 setup.py bdist_wheel --dist-dir=$CI_PROJECT_DIR/dist
+    - VERSION=$(python3 -c "from imp import load_source; pkginfo = load_source('pkginfo.version', 'src/version.py'); print(pkginfo.__version__)")
+    # Do not publish .dev versions on the public pypi
+    - if [[ "$VERSION" =~ \.dev[[:digit:]]*.*$ ]]; then exit 1; fi
+    - python3 -m twine upload --verbose $CI_PROJECT_DIR/dist/*.whl -u __token__ -p $PYPI_API_KEY
+  rules:
+    - if: '$CI_COMMIT_REF_NAME =~ /^release-.*/'
 
-internal-pypi:
+export_internal:
   stage: deploy
-  only:
-    - master
+  image: python:3.7-slim
   script:
-    - pip3 install twine wheel setuptools --upgrade
-    - rm -rf build dist *.egg-info
-    - python3 setup.py sdist bdist_wheel
-    - twine check dist/*
-    - echo 0 > exitcode.txt
-    - (twine upload --verbose --repository-url $CI_API_V4_URL/projects/$CI_PROJECT_ID/packages/pypi --username gitlab-ci-token --password "$CI_JOB_TOKEN" dist/* | tee response.txt) || (echo $? > exitcode.txt; exit 0)
-    # do not fail if we try to re-upload a package of the same version
-    - if [[ "$(cat exitcode.txt)" != 0 && -z "$(cat response.txt | grep "File name has already been taken")" ]];
-      then
-        exit 1;
+    - pip install -r requirements-dev.txt
+    - python3 setup.py bdist_wheel --dist-dir=$CI_PROJECT_DIR/dist
+    - VERSION=$(python3 -c "from imp import load_source; pkginfo = load_source('pkginfo.version', 'gtirb_functions/version.py'); print(pkginfo.__version__)")
+    - if [[ "$VERSION" =~ \.dev[[:digit:]]*.*$ && "$CI_COMMIT_REF_NAME" =~ ^release-.* ]]; then exit 1; fi
+    # this job is not using $CI_JOB_TOKEN because it only has read access
+    # https://gitlab.com/gitlab-org/gitlab/-/issues/35067
+    # this job is also not using $CI_DEPLOY_USER and $CI_DEPLOY_PASSWORD because it only has write access
+    - if [[ "$CI_COMMIT_BRANCH" == "master" ]]; then
+        if [[ ! "$VERSION" =~ \.dev[[:digit:]]*$ ]]; then
+          echo "[ERROR] On the master branch, we must be exporting a -dev version.";
+          exit 1;
+        fi;
+        if pip3 install --extra-index-url=$EXTRA_INDEX_URL "gtirb_functions>$VERSION" 2>/dev/null; then
+          echo "[ERROR] The package version being published on master should always be >= the version in the repository.";
+          exit 1;
+        fi;
+        wget ${CI_SERVER_HOST}/research/templates/python-module/raw/master/delete_remote_packages.py;
+        python3 $CI_PROJECT_DIR/delete_remote_packages.py $GL_PKG_API_TOKEN dist/*.whl;
       fi
+    - wget ${CI_SERVER_HOST}/research/templates/python-module/raw/master/.pypirc
+    - sed "s/password = <access token>/password = $GL_PKG_API_TOKEN/" $CI_PROJECT_DIR/.pypirc > ~/.pypirc
+    - python3 -m twine upload --verbose --repository repypi $CI_PROJECT_DIR/dist/*.whl
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_REF_NAME =~ /^release-.*/'
+    # If you need to publish a package for a specific branch, change the
+    # package version to something like, '0.0.0.dev0+mybranchname', uncomment
+    # the rule below and replace 'mybranchname' with your branch name.
+    #- if: '$CI_COMMIT_BRANCH == "mybranchname"'
+    #  changes:
+    #    - src/version.py
