Upload both dev and non-dev packages

--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -50,7 +50,7 @@ build:
   stage: build
   artifacts:
     paths:
-      - dist/gtirb_functions-?.?.?-py3-none-any.whl
+      - dist/gtirb_functions-*-py3-none-any.whl
     expire_in: 1 weeks
   script:
     - python3 setup.py sdist bdist_wheel
