fixed formatting issues

--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -2,20 +2,21 @@
 configure_file("${CMAKE_SOURCE_DIR}/include/gtirb_functions/version.h.in"
                "${CMAKE_BINARY_DIR}/include/gtirb_functions/version.h" @ONLY)
 
-set(GTIRB_HEADERS "${CMAKE_SOURCE_DIR}/include/gtirb_functions/gtirb_functions.hpp"
-                  "${CMAKE_BINARY_DIR}/include/gtirb_functions/version.h")
+set(GTIRB_HEADERS
+    "${CMAKE_SOURCE_DIR}/include/gtirb_functions/gtirb_functions.hpp"
+    "${CMAKE_BINARY_DIR}/include/gtirb_functions/version.h")
 
-add_library(gtirb_functions ${CMAKE_CURRENT_SOURCE_DIR}/gtirb_functions.cpp ${GTIRB_FUNCTION_HEADERS})
+add_library(gtirb_functions ${CMAKE_CURRENT_SOURCE_DIR}/gtirb_functions.cpp
+                            ${GTIRB_FUNCTION_HEADERS})
 
-set_target_properties(gtirb_functions PROPERTIES VERSION ${gtirb_functions_VERSION}
-                                       SOVERSION ${GTIRB_FUNCTION_MAJOR_VERSION})
+set_target_properties(
+  gtirb_functions PROPERTIES VERSION ${gtirb_functions_VERSION}
+                             SOVERSION ${GTIRB_FUNCTION_MAJOR_VERSION})
 
 target_include_directories(
   gtirb_functions PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>)
 target_include_directories(
   gtirb_functions PUBLIC $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
-
-target_link_libraries(gtirb_functions PUBLIC ref_ptr)
 
 install_linux_debug_info(gtirb_functions gtirb_functions-debug-file)
 
@@ -35,11 +36,12 @@ install(
 
 # Driver
 add_executable(gtirb_functions-driver ${GTIRB_FUNCTION_HEADERS}
-                            ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 
 target_link_libraries(gtirb_functions-driver PRIVATE gtirb_functions)
 
-install_linux_debug_info(gtirb_functions-driver gtirb_functions-driver-debug-file)
+install_linux_debug_info(gtirb_functions-driver
+                         gtirb_functions-driver-debug-file)
 
 install(
   TARGETS gtirb_functions-driver
