changes to build  scripts

--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(gtirb_functions ${CMAKE_CURRENT_SOURCE_DIR}/gtirb_functions.cpp
                             ${GTIRB_FUNCTION_HEADERS})
 
 set_target_properties(
-  gtirb_functions PROPERTIES VERSION ${gtirb_functions_VERSION}
+  gtirb_functions PROPERTIES VERSION ${GTIRB_FUNCTIONS_VERSION}
                              SOVERSION ${GTIRB_FUNCTION_MAJOR_VERSION})
 
 target_include_directories(
@@ -35,18 +35,18 @@ install(
   COMPONENT headers)
 
 # Driver
-add_executable(gtirb_functions-driver ${GTIRB_FUNCTION_HEADERS}
-                                      ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
+# add_executable(gtirb_functions-driver ${GTIRB_FUNCTION_HEADERS}
+#                                       ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 
-target_link_libraries(gtirb_functions-driver PRIVATE gtirb_functions)
+# target_link_libraries(gtirb_functions-driver PRIVATE gtirb_functions)
 
-install_linux_debug_info(gtirb_functions-driver
-                         gtirb_functions-driver-debug-file)
+# install_linux_debug_info(gtirb_functions-driver
+#                          gtirb_functions-driver-debug-file)
 
-install(
-  TARGETS gtirb_functions-driver
-  DESTINATION bin
-  COMPONENT driver)
+# install(
+#   TARGETS gtirb_functions-driver
+#  DESTINATION bin
+#  COMPONENT driver)
 
 # Tests
 if(GTIRB_FUNCTION_ENABLE_TESTS)
