--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -7,18 +7,18 @@ cmake_minimum_required(VERSION 3.13.0)
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/version.txt" VERSION_FILE)
 
 string(REGEX MATCH "VERSION_MAJOR ([0-9]*)" _ ${VERSION_FILE})
-set(HELLO_MAJOR_VERSION ${CMAKE_MATCH_1})
+set(GITRB_FUNCTIONS_MAJOR_VERSION ${CMAKE_MATCH_1})
 
 string(REGEX MATCH "VERSION_MINOR ([0-9]*)" _ ${VERSION_FILE})
-set(HELLO_MINOR_VERSION ${CMAKE_MATCH_1})
+set(GTIRB_FUNCTIONS_MINOR_VERSION ${CMAKE_MATCH_1})
 
 string(REGEX MATCH "VERSION_PATCH ([0-9]*)" _ ${VERSION_FILE})
-set(HELLO_PATCH_VERSION ${CMAKE_MATCH_1})
+set(GTIRB_FUNCTIONS_PATCH_VERSION ${CMAKE_MATCH_1})
 
 cmake_policy(SET CMP0048 NEW)
 project(
   gtirb_functions
-  VERSION "${HELLO_MAJOR_VERSION}.${HELLO_MINOR_VERSION}.${HELLO_PATCH_VERSION}"
+  VERSION "${GITRB_FUNCTIONS_MAJOR_VERSION}.${GTIRB_FUNCTIONS_MINOR_VERSION}.${GTIRB_FUNCTIONS_PATCH_VERSION}"
 )
 
 option(ENABLE_CONAN "Use Conan to inject dependencies" OFF)
@@ -222,9 +222,9 @@ set(CPACK_PROJECT_CONFIG_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cpack-config.cmake)
 set(CMAKE_PROJECT_HOMEPAGE_URL
     https://git.grammatech.com/rewriting/Templates/CMake)
 
-set(CPACK_PACKAGE_VERSION_MAJOR ${HELLO_MAJOR_VERSION})
-set(CPACK_PACKAGE_VERSION_MINOR ${HELLO_MINOR_VERSION})
-set(CPACK_PACKAGE_VERSION_PATCH ${HELLO_PATCH_VERSION})
+set(CPACK_PACKAGE_VERSION_MAJOR ${GITRB_FUNCTIONS_MAJOR_VERSION})
+set(CPACK_PACKAGE_VERSION_MINOR ${GTIRB_FUNCTIONS_MINOR_VERSION})
+set(CPACK_PACKAGE_VERSION_PATCH ${GTIRB_FUNCTIONS_PATCH_VERSION})
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Package description")
 set(CPACK_PACKAGE_VENDOR "GrammaTech Inc.")
 set(CPACK_PACKAGE_CONTACT someone@grammatech.com)
