--- a/cpp/src/test/CMakeLists.txt
+++ b/cpp/src/test/CMakeLists.txt
@@ -2,10 +2,13 @@ enable_testing()
 
 include_directories(${GTEST_INCLUDE_DIRS})
 
-add_executable(hello_test hello.test.cpp main.test.cpp)
+add_executable(gtfunctions_test gtirb-functions.test.cpp main.test.cpp)
 
-target_link_libraries(hello_test gtest gtest_main hello)
+target_link_libraries(gtfunctions_test gtest gtest_main  gtirb_functions gtirb)
 
-add_test(NAME hello_test COMMAND hello_test)
+target_link_directories(gtfunctions_test PUBLIC ${CMAKE_SOURCE_DIR}/lib)
 
-add_test(NAME testhello COMMAND $<TARGET_FILE:hello_test>)
+
+add_test(NAME gtfunctions_test COMMAND gtfunctions_test)
+
+add_test(NAME testgfunctions COMMAND $<TARGET_FILE:gtfunctions_test>)
