--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -13,13 +13,11 @@ set_target_properties(
   gtirb_functions PROPERTIES VERSION ${GTIRB_FUNCTIONS_VERSION}
                              SOVERSION ${GTIRB_FUNCTION_MAJOR_VERSION})
 
-
 target_include_directories(
   gtirb_functions PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>)
 target_include_directories(gtirb_functions PUBLIC /usr/include)
-# target_include_directories(
-#  gtirb_functions PUBLIC $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
-
+# target_include_directories( gtirb_functions PUBLIC
+# $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
 
 install_linux_debug_info(gtirb_functions gtirb_functions-debug-file)
 
@@ -37,19 +35,15 @@ install(
   DESTINATION include/gtirb_functions
   COMPONENT headers)
 
-# Driver
-# add_executable(gtirb_functions-driver ${GTIRB_FUNCTION_HEADERS}
-#                                       ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
+# Driver add_executable(gtirb_functions-driver ${GTIRB_FUNCTION_HEADERS}
+# ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 
 # target_link_libraries(gtirb_functions-driver PRIVATE gtirb_functions)
 
-# install_linux_debug_info(gtirb_functions-driver
-#                          gtirb_functions-driver-debug-file)
+# install_linux_debug_info(gtirb_functions-driver gtirb_functions-driver-debug-
+# file)
 
-# install(
-#   TARGETS gtirb_functions-driver
-#  DESTINATION bin
-#  COMPONENT driver)
+# install( TARGETS gtirb_functions-driver DESTINATION bin COMPONENT driver)
 
 # Tests
 if(GTIRB_FUNCTION_ENABLE_TESTS)
