--- a/cpp/.gitlab-ci.yml
+++ b/cpp/.gitlab-ci.yml
@@ -17,11 +17,11 @@ default:
 
 stages:
   - check-format
-  - build
-  - cpack-make-installers
-  - cpack-test
-  - cpack-test-shared-lib
-  - cpack-deploy
+  # - build
+  # - cpack-make-installers
+  # - cpack-test
+  # - cpack-test-shared-lib
+  # - cpack-deploy
 
 check-format:
   stage: check-format
@@ -64,7 +64,6 @@ coverage:
     - cmake -DENABLE_CODE_COVERAGE=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON ..
     - make
     - ctest
-    - bin/hello-driver test
     - gcovr -e googletest-src -r ..
 
 # CPack jobs:
@@ -90,12 +89,11 @@ rpm-build:
     - mkdir build
     - cd build
     - conan install ..
-    - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DHELLO_STRIP_DEBUG_SYMBOLS=OFF -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON ..
+    - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DGTIRB_FUNCTION_STRIP_DEBUG_SYMBOLS=OFF -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON ..
     - make
     - ctest
-    - cpack -G RPM -D CPACK_HELLO_PACKAGE=lib
-    - cpack -G RPM -D CPACK_HELLO_PACKAGE=dev
-    - cpack -G RPM -D CPACK_HELLO_PACKAGE=driver
+    - cpack -G RPM -D CPACK_GTIRB_FUNCTION_PACKAGE=lib
+    - cpack -G RPM -D CPACK_GTIRB_FUNCTION_PACKAGE=dev
     - cd ../ && mv build ../build
 
 rpm-make-installers:
@@ -109,13 +107,6 @@ rpm-make-installers:
     - mkdir installers/
     - cp build/*.rpm installers/
 
-rpm-test-driver:
-  stage: cpack-test
-  needs: [rpm-make-installers]
-  image: ${CENTOS_BASE_IMAGE}
-  script:
-    - yum localinstall -y installers/libhello.rpm installers/hello-driver.rpm
-    - hello-driver GrammaTech
 
 rpm-test-dev:
   stage: cpack-test
@@ -125,13 +116,13 @@ rpm-test-dev:
     paths:
       - test-install
   script:
-    - yum localinstall -y installers/libhello.rpm installers/libhello-dev.rpm
-    - cp src/main.cpp ./ && g++ main.cpp -o test-install -lhello -lstdc++
+    - yum localinstall -y installers/libgtirb-functions.rpm installers/libgtirb-functions-dev.rpm
+    - cp src/main.cpp ./ && g++ main.cpp -o test-install -lgtirb-functions -lstdc++
     - ./test-install GrammaTech
 
 rpm-installer-centos8:
   stage: cpack-deploy
-  needs: [rpm-make-installers, rpm-test-driver, rpm-test-dev, rpm-test-shared-lib]
+  needs: [rpm-make-installers, rpm-test-dev, rpm-test-shared-lib]
   image: ${CENTOS_BASE_IMAGE}
   artifacts:
     paths:
@@ -144,7 +135,7 @@ rpm-test-shared-lib:
   needs: [rpm-make-installers, rpm-test-dev]
   image: ${CENTOS_BASE_IMAGE}
   script:
-    - yum localinstall -y installers/libhello.rpm installers/libhello-dev.rpm
+    - yum localinstall -y installers/libgtirb-functions.rpm installers/libgtirb-functions-dev.rpm
     - ./test-install GrammaTech
 
 .build-cpack-template: &build-cpack
@@ -158,14 +149,12 @@ rpm-test-shared-lib:
     - mkdir build
     - cd build
     - conan install ..
-    - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DHELLO_STRIP_DEBUG_SYMBOLS=ON ..
+    - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DGTIRB_FUNCTION_STRIP_DEBUG_SYMBOLS=ON ..
     - make
     - ctest
-    - cpack -G DEB -D CPACK_HELLO_PACKAGE=lib
-    - cpack -G DEB -D CPACK_HELLO_PACKAGE=lib-dbg
-    - cpack -G DEB -D CPACK_HELLO_PACKAGE=dev
-    - cpack -G DEB -D CPACK_HELLO_PACKAGE=driver
-    - cpack -G DEB -D CPACK_HELLO_PACKAGE=driver-dbg
+    - cpack -G DEB -D CPACK_GTIRB_FUNCTION_PACKAGE=lib
+    - cpack -G DEB -D CPACK_GTIRB_FUNCTION_PACKAGE=lib-dbg
+    - cpack -G DEB -D CPACK_GTIRB_FUNCTION_PACKAGE=dev
 
 .setup-repo: &setup-repo
   stage: cpack-make-installers
@@ -183,24 +172,8 @@ rpm-test-shared-lib:
     apt-get update -y
 
 .cpack-check-lib-build-id: &cpack-check-lib-build-id |
-    [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libhello.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
+    [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
 
-.cpack-check-driver-build-id: &cpack-check-driver-build-id |
-    [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/bin/hello-driver | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
-
-.debian-test-driver: &test-driver
-  stage: cpack-test
-  script:
-    - *cpack-update-apt-sources-template
-    - apt-get install -y hello-driver
-    - hello-driver GrammaTech
-
-.test-driver-dbg: &test-driver-dbg
-  stage: cpack-test
-  script:
-    - *cpack-update-apt-sources-template
-    - apt-get install -y hello-driver hello-driver-dbg
-    - *cpack-check-driver-build-id
 
 .test-dev: &test-dev
   stage: cpack-test
@@ -209,7 +182,7 @@ rpm-test-shared-lib:
       - test-install
   script:
     - *cpack-update-apt-sources-template
-    - apt-get install -y libhello-dev
+    - apt-get install -y libgtirb-functions-dev
     - cp src/main.cpp ./ && g++ main.cpp -o test-install -lhello -lstdc++
     - ./test-install GrammaTech
 
@@ -217,7 +190,7 @@ rpm-test-shared-lib:
   stage: cpack-test-shared-lib
   script:
     - *cpack-update-apt-sources-template
-    - apt-get install -y libhello-dev
+    - apt-get install -y libgtirb-functions-dev
     - ./test-install GrammaTech
 
 .test-lib-dbg: &test-lib-dbg
@@ -225,8 +198,8 @@ rpm-test-shared-lib:
   script:
     - 'echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list'
     - apt-get update -y
-    - apt-get install -y libhello libhello-dbg
-    - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libhello.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
+    - apt-get install -y libgtirb-functions libgtirb-functions-dbg
+    - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
 
 .debian-deploy: &debian-deploy
   stage: cpack-deploy
@@ -245,16 +218,6 @@ setup-repo-ubuntu18:
   image: ${UBUNTU18_CPP_IMAGE}
   <<: *setup-repo
 
-test-driver-ubuntu18:
-  needs: [setup-repo-ubuntu18]
-  image: ${UBUNTU18_BASE_IMAGE}
-  <<: *test-driver
-
-test-driver-dbg-ubuntu18:
-  needs: [setup-repo-ubuntu18]
-  image: ${UBUNTU18_CPP_IMAGE}
-  <<: *test-driver-dbg
-
 test-dev-ubuntu18:
   needs: [setup-repo-ubuntu18]
   image: ${UBUNTU18_CPP_IMAGE}
@@ -271,7 +234,7 @@ test-lib-dbg-ubuntu18:
   <<: *test-lib-dbg
 
 deploy-ubuntu18:
-  needs: [setup-repo-ubuntu18, test-driver-ubuntu18, test-dev-ubuntu18, test-lib-ubuntu18]
+  needs: [setup-repo-ubuntu18, test-dev-ubuntu18, test-lib-ubuntu18]
   image: ${UBUNTU18_BASE_IMAGE}
   <<: *debian-deploy
 
@@ -284,15 +247,6 @@ setup-repo-ubuntu20:
   needs: [build-cpack-ubuntu20]
   <<: *setup-repo
 
-test-driver-ubuntu20:
-  image: ${UBUNTU20_BASE_IMAGE}
-  needs: [setup-repo-ubuntu20]
-  <<: *test-driver
-
-test-driver-dbg-ubuntu20:
-  image: ${UBUNTU20_CPP_IMAGE}
-  needs: [setup-repo-ubuntu20]
-  <<: *test-driver-dbg
 
 test-dev-ubuntu20:
   image: ${UBUNTU20_CPP_IMAGE}
@@ -311,5 +265,5 @@ test-lib-dbg-ubuntu20:
 
 deploy-ubuntu20:
   image: ${UBUNTU20_BASE_IMAGE}
-  needs: [setup-repo-ubuntu20, test-driver-ubuntu20, test-dev-ubuntu20, test-lib-ubuntu20]
+  needs: [setup-repo-ubuntu20, test-dev-ubuntu20, test-lib-ubuntu20]
   <<: *debian-deploy
