--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,9 +7,11 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.4.0
     hooks:
+      - id: check-yaml
+        args: [--allow-multiple-documents]
       - id: end-of-file-fixer
+      - id: mixed-line-ending
       - id: trailing-whitespace
-        exclude: tests/hello.v1.gtirb.functions
       - id: check-merge-conflict
   - repo: https://github.com/eschulte/lisp-format
     rev: master
@@ -21,3 +23,11 @@ repos:
     rev: 3.7.9
     hooks:
       - id: flake8
+  - repo: https://github.com/iconmaster5326/cmake-format-pre-commit-hook
+    rev: master
+    hooks:
+      - id: cmake-format
+  - repo: https://github.com/doublify/pre-commit-clang-format
+    rev: master
+    hooks:
+      - id: clang-format
