reverting previous change, didn't understand rules for deploy stage

--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -7,7 +7,7 @@ stages:
   - test
   - build
   - test_package
-#  - deploy
+  - deploy
 
 default:
   image: $DOCKER_REGISTRY/rewriting/gtirb-functions
