--- a/Dockerfile.ubuntu20
+++ b/Dockerfile.ubuntu20
@@ -2,11 +2,18 @@ FROM ubuntu:20.04
 
 # DEBIAN_FRONTEND=noninteractive: needed to sidestep interactivity in install
 # of tzdata, which asks for time zone info
+RUN wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
+RUN echo "deb https://download.grammatech.com/gtirb/files/apt-repo focal gtirb"| sudo tee -a /etc/apt/sources.list
+RUN add-apt-repository ppa:mhier/libboost-latest
 RUN apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive \
-    apt-get install -y build-essential cmake curl clang-format gcovr git \
+    apt-get install -y build-essential boost cmake curl clang-format \
+                       gcovr git gtirb\
                        python3 python3-pip python-is-python3
+
+                       
 RUN pip3 install --upgrade pip && pip3 install pre-commit conan
+
 
 # Use EDT for timestamps (necessary?)
 RUN ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime
