--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -7,12 +7,9 @@ variables:
   UBUNTU18_BASE_IMAGE: ubuntu:18.04
   CENTOS_BASE_IMAGE: centos:8
   # Projects may want to use images in their own namespace
-  # UBUNTU20_CPP_IMAGE: $DOCKER_REGISTRY/$CI_PROJECT_NAMESPACE/hello/ubuntu20
-  # UBUNTU18_CPP_IMAGE: $DOCKER_REGISTRY/$CI_PROJECT_NAMESPACE/hello/ubuntu18
+  UBUNTU20_CPP_IMAGE: $DOCKER_REGISTRY/${CI_API_V4_URL}/rewriting/gtirb-functions/ubuntu20
+  UBUNTU18_CPP_IMAGE: $DOCKER_REGISTRY/${CI_API_V4_URL}/rewriting/gtirb-functions/ubuntu18
   # CENTOS_CPP_IMAGE: $DOCKER_REGISTRY/$CI_PROJECT_NAMESPACE/hello/centos8
-  UBUNTU20_CPP_IMAGE: $DOCKER_REGISTRY/research/templates/cpp/ubuntu20
-  UBUNTU18_CPP_IMAGE: $DOCKER_REGISTRY/research/templates/cpp/ubuntu18
-  CENTOS_CPP_IMAGE: $DOCKER_REGISTRY/research/templates/cpp/centos8
 
 
 
@@ -71,7 +68,7 @@ build:
   stage: build
   artifacts:
     paths:
-      - dist/gtirb_functions-*-py3-none-any.whl
+      - dist/gtirb-functions-*-py3-none-any.whl
     expire_in: 1 weeks
   script:
     - python3 setup.py sdist bdist_wheel
@@ -101,7 +98,7 @@ export_internal:
   script:
     - pip install -r requirements-dev.txt
     - python3 setup.py bdist_wheel --dist-dir=$CI_PROJECT_DIR/dist
-    - VERSION=$(python3 -c "from imp import load_source; pkginfo = load_source('pkginfo.version', 'gtirb_functions/version.py'); print(pkginfo.__version__)")
+    - VERSION=$(python3 -c "from imp import load_source; pkginfo = load_source('pkginfo.version', 'gtirb-functions/version.py'); print(pkginfo.__version__)")
     - if [[ "$VERSION" =~ \.dev[[:digit:]]*.*$ && "$CI_COMMIT_REF_NAME" =~ ^release-.* ]]; then exit 1; fi
     # this job is not using $CI_JOB_TOKEN because it only has read access
     # https://gitlab.com/gitlab-org/gitlab/-/issues/35067
@@ -111,7 +108,7 @@ export_internal:
           echo "[ERROR] On the master branch, we must be exporting a -dev version.";
           exit 1;
         fi;
-        if pip3 install --extra-index-url=$EXTRA_INDEX_URL "gtirb_functions>$VERSION" 2>/dev/null; then
+        if pip3 install --extra-index-url=$EXTRA_INDEX_URL "gtirb-functions>$VERSION" 2>/dev/null; then
           echo "[ERROR] The package version being published on master should always be >= the version in the repository.";
           exit 1;
         fi;
@@ -144,7 +141,7 @@ export_internal:
   needs: [check-format]
   script:
     - *conan-template
-    - python3 create-conan-package.py
+    - python3 create-conan-package.py --build=missing
 
 build-ubuntu20:
   image: ${UBUNTU20_CPP_IMAGE}
@@ -197,7 +194,6 @@ coverage:
   script:
     - mkdir installers/
     - cp build/*.deb installers/
-    - cp src/main.cpp installers/
     - cd installers/ && dpkg-scanpackages . /dev/null > Packages
 
 .cpack-update-apt-sources-template: &cpack-update-apt-sources-template |
@@ -205,7 +201,7 @@ coverage:
     apt-get update -y
 
 .cpack-check-lib-build-id: &cpack-check-lib-build-id |
-    [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb_functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
+    [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
 
 .test-dev: &test-dev
   stage: cpack-test
@@ -213,16 +209,8 @@ coverage:
     paths:
       - test-install
   script:
-    - *cpack-update-apt-sources-template
-    - apt-get install -y libgtirb_functions-dev
-    - cp src/main.cpp ./ && g++ main.cpp -o test-install -lgtirb_functions -lstdc++
-    - ./test-install GrammaTech
 
-.test-lib: &test-lib
-  stage: cpack-test-shared-lib
-  script:
-    - *cpack-update-apt-sources-template
-    - apt-get install -y libgtirb_functions-dev
+    - apt-get install -y libgtirb-functions-dev
     - ./test-install GrammaTech
 
 .test-lib-dbg: &test-lib-dbg
@@ -230,14 +218,14 @@ coverage:
   script:
     - 'echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list'
     - apt-get update -y
-    - apt-get install -y libgtirb_functions libgtirb_functions-dbg
-    - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb_functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
+    - apt-get install -y libgtirb-functions libgtirb-functions-dbg
+    - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
 
 .debian-deploy: &debian-deploy
   stage: cpack-deploy
   artifacts:
     paths:
-      - '*gtirb_functions*.deb'
+      - '*gtirb-functions*.deb'
   script:
     - cp installers/*.deb ./
 
