--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -153,7 +153,7 @@ build-ubuntu18:
 
 coverage:
   stage: build
-  needs: [check-format, build-ubuntu20]
+  needs: [check-format]
   image: ${UBUNTU20_CPP_IMAGE}
   script:
     - *conan-template
