added debug statement to conan remote

--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -133,6 +133,7 @@ export_internal:
   - conan profile new default --detect
   - conan profile update settings.compiler.libcxx=libstdc++11 default
   - conan remote add gitlab ${CI_API_V4_URL}/packages/conan
+  - conan remote list
   - export CONAN_PASSWORD="$CI_JOB_TOKEN"
   - conan user ci_user -r gitlab -p
 
