added  enable-conan when running conan install + cmake

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,10 +1,15 @@
 enable_testing()
+# TODO: get coverage working
 
 include_directories(${GTEST_INCLUDE_DIRS})
+include_directories(${CMAKE_SOURCE_DIR}/include)
+
+add_compile_options( -Wno-shadow -Wno-deprecated-copy
+                                              -Wno-unused-local-typedefs)
 
 add_executable(gtfunctions_test gtirb-functions.test.cpp main.test.cpp)
 
-target_link_libraries(gtfunctions_test gtest gtest_main gtirb_functions gtirb)
+target_link_libraries(gtfunctions_test gtest gtest_main gtirb-functions gtirb)
 
 target_link_directories(gtfunctions_test PUBLIC ${CMAKE_SOURCE_DIR}/lib)
 
