--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -161,7 +161,7 @@ coverage:
     - mkdir build
     - cd build
     - conan install ..
-    - cmake -DENABLE_CODE_COVERAGE=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON ..
+    - cmake -DENABLE_CODE_COVERAGE=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DENABLE_CONAN ..
     - make
     - ctest
     - gcovr -e googletest-src -r ..
@@ -179,7 +179,7 @@ coverage:
     - mkdir build
     - cd build
     - conan install ..
-    - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DGTIRB_FUNCTION_STRIP_DEBUG_SYMBOLS=ON ..
+    - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DGTIRB_FUNCTION_STRIP_DEBUG_SYMBOLS=ON -DENABLE_CONAN=ON ..
     - make
     - ctest
     - cpack -G DEB -D CPACK_GTIRB_FUNCTION_PACKAGE=lib
@@ -239,6 +239,10 @@ coverage:
       - '*gtirb-functions*.deb'
   script:
     - cp installers/*.deb ./
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_REF_NAME =~ /^release-.*/'
+
 
 build-cpack-ubuntu18:
   image: ${UBUNTU18_CPP_IMAGE}
