more cpack fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ cmake_minimum_required(VERSION 3.13.0)
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/version.txt" VERSION_FILE)
 
 string(REGEX MATCH "VERSION_MAJOR ([0-9]*)" _ ${VERSION_FILE})
-set(GITRB_FUNCTIONS_MAJOR_VERSION ${CMAKE_MATCH_1})
+set(GTIRB_FUNCTIONS_MAJOR_VERSION ${CMAKE_MATCH_1})
+message(MAJ_VERSION=${GTIRB_FUNCTIONS_MAJOR_VERSION})
 
 string(REGEX MATCH "VERSION_MINOR ([0-9]*)" _ ${VERSION_FILE})
 set(GTIRB_FUNCTIONS_MINOR_VERSION ${CMAKE_MATCH_1})
@@ -16,11 +17,14 @@ string(REGEX MATCH "VERSION_PATCH ([0-9]*)" _ ${VERSION_FILE})
 set(GTIRB_FUNCTIONS_PATCH_VERSION ${CMAKE_MATCH_1})
 
 cmake_policy(SET CMP0048 NEW)
+
 project(
   gtirb-functions
   VERSION
-    "${GITRB_FUNCTIONS_MAJOR_VERSION}.${GTIRB_FUNCTIONS_MINOR_VERSION}.${GTIRB_FUNCTIONS_PATCH_VERSION}"
+    "${GTIRB_FUNCTIONS_MAJOR_VERSION}.${GTIRB_FUNCTIONS_MINOR_VERSION}.${GTIRB_FUNCTIONS_PATCH_VERSION}"
 )
+set(GTIRB_FUNCTIONS_VERSION ${CMAKE_PROJECT_VERSION})
+message(GTIRB_FUNCTIONS_VERSION=${GTIRB_FUNCTIONS_VERSION})
 
 option(ENABLE_CONAN "Use Conan to inject dependencies" OFF)
 
@@ -236,10 +240,6 @@ set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
 set(CPACK_PACKAGE_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt)
 
 set(CPACK_DEBIAN_PACKAGE_SECTION devel)
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "gtirb (>=1.10.0)")
-
-set(CPACK_RPM_PACKAGE_REQUIRES "gtirb (>=1.10.0)")
-
 set(CPACK_GTIRB_FUNCTIONS_VERSION "${GTIRB_FUNCTIONS_VERSION}")
 
 include(CPack)
