--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -183,7 +183,7 @@ coverage:
     - make
     - ctest
     - cpack -G DEB -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib
-    - cpack -G DEB -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib-dbg
+    # - cpack -G DEB -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib-dbg
     - cpack -G DEB -D CPACK_GTIRB_FUNCTIONS_PACKAGE=dev
 
 
@@ -198,6 +198,7 @@ coverage:
     - cd installers/ && dpkg-scanpackages . /dev/null > Packages
 
 .cpack-update-apt-sources-template: &cpack-update-apt-sources-template |
+    
     echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list
     apt-get update -y
 
@@ -263,10 +264,10 @@ test-lib-ubuntu18:
   image: ${UBUNTU18_BASE_IMAGE}
   <<: *test-lib
 
-test-lib-dbg-ubuntu18:
-  needs: [setup-repo-ubuntu18]
-  image: ${UBUNTU18_CPP_IMAGE}
-  <<: *test-lib-dbg
+# test-lib-dbg-ubuntu18:
+#   needs: [setup-repo-ubuntu18]
+#   image: ${UBUNTU18_CPP_IMAGE}
+#   <<: *test-lib-dbg
 
 deploy-ubuntu18:
   needs: [setup-repo-ubuntu18, test-dev-ubuntu18, test-lib-ubuntu18]
@@ -292,10 +293,10 @@ test-lib-ubuntu20:
   needs: [setup-repo-ubuntu20, test-dev-ubuntu20]
   <<: *test-lib
 
-test-lib-dbg-ubuntu20:
-  image: ${UBUNTU20_CPP_IMAGE}
-  needs: [setup-repo-ubuntu20]
-  <<: *test-lib-dbg
+# test-lib-dbg-ubuntu20:
+#   image: ${UBUNTU20_CPP_IMAGE}
+#   needs: [setup-repo-ubuntu20]
+#   <<: *test-lib-dbg
 
 deploy-ubuntu20:
   image: ${UBUNTU20_BASE_IMAGE}
