--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -7,8 +7,8 @@ variables:
   UBUNTU18_BASE_IMAGE: ubuntu:18.04
   CENTOS_BASE_IMAGE: centos:8
   # Projects may want to use images in their own namespace
-  UBUNTU20_CPP_IMAGE: $DOCKER_REGISTRY/rewriting/gtirb-functions/ubuntu20
-  UBUNTU18_CPP_IMAGE: $DOCKER_REGISTRY/rewriting/gtirb-functions/ubuntu18
+  UBUNTU20_CPP_IMAGE: $DOCKER_REGISTRY/rewriting/gtirb/ubuntu20
+  UBUNTU18_CPP_IMAGE: $DOCKER_REGISTRY/rewriting/gtirb/ubuntu18
   # CENTOS_CPP_IMAGE: $DOCKER_REGISTRY/$CI_PROJECT_NAMESPACE/hello/centos8
 
 
@@ -198,10 +198,9 @@ coverage:
     - cd installers/ && dpkg-scanpackages . /dev/null > Packages
 
 .cpack-update-apt-sources-template: &cpack-update-apt-sources-template |
+    RUN wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
+    RUN echo "deb https://download.grammatech.com/gtirb/files/apt-repo bionic latest"| sudo tee -a /etc/apt/sources.list
     echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list
-    curl -L https://git.grammatech.com/rewriting/gtirb/-/jobs/artifacts/${GTIRB_BRANCH}/download?job=${JOB_NAME} --output "gtirb.zip"
-    unzip gtirb.zip
-    dpkg -i libgtirb.deb
     apt-get update -y
 
 .cpack-check-lib-build-id: &cpack-check-lib-build-id |
@@ -214,13 +213,13 @@ coverage:
       - test-install
   script:
     - *cpack-update-apt-sources-template
-    - apt-get install -y libgtirb-functions-dev
+    - apt-get install -y -m libgtirb-functions-dev
 
 .test-lib: &test-lib
   stage: cpack-test-shared-lib
   script:
     - *cpack-update-apt-sources-template
-    - apt-get install -y libgtirb-functions-dev
+    - apt-get install -y -m libgtirb-functions-dev
     # - ./test-install GrammaTech
 
 
@@ -230,7 +229,7 @@ coverage:
   script:
     - 'echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list'
     - apt-get update -y
-    - apt-get install -y libgtirb-functions libgtirb-functions-dbg
+    - apt-get install -y -m libgtirb-functions libgtirb-functions-dbg
     - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
 
 .debian-deploy: &debian-deploy
